--- a/nucleo-L073RZ-audioPassthrough/nucleo-L073RZ-audioPassthrough.ioc
+++ b/nucleo-L073RZ-audioPassthrough/nucleo-L073RZ-audioPassthrough.ioc
@@ -1,11 +1,17 @@
 #MicroXplorer Configuration settings - do not modify
-ADC.ClockPrescaler=ADC_CLOCK_ASYNC_DIV64
-ADC.ContinuousConvMode=ENABLE
+ADC.ClockPrescaler=ADC_CLOCK_ASYNC_DIV1
+ADC.ContinuousConvMode=DISABLE
 ADC.DMAContinuousRequests=ENABLE
+ADC.DiscontinuousConvMode=DISABLE
+ADC.EOCSelection=ADC_EOC_SINGLE_CONV
 ADC.EnableAnalogWatchDog=false
-ADC.IPParameters=ClockPrescaler,ContinuousConvMode,DMAContinuousRequests,Overrun,SamplingTime,EnableAnalogWatchDog
-ADC.Overrun=ADC_OVR_DATA_PRESERVED
-ADC.SamplingTime=ADC_SAMPLETIME_160CYCLES_5
+ADC.ExternalTrigConv=ADC_EXTERNALTRIGCONV_T6_TRGO
+ADC.ExternalTrigConvEdge=ADC_EXTERNALTRIGCONVEDGE_RISING
+ADC.IPParameters=ClockPrescaler,ContinuousConvMode,DMAContinuousRequests,Overrun,SamplingTime,EnableAnalogWatchDog,ExternalTrigConv,EOCSelection,ExternalTrigConvEdge,OversamplingMode,DiscontinuousConvMode,Resolution
+ADC.Overrun=ADC_OVR_DATA_OVERWRITTEN
+ADC.OversamplingMode=DISABLE
+ADC.Resolution=ADC_RESOLUTION_12B
+ADC.SamplingTime=ADC_SAMPLETIME_3CYCLES_5
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
@@ -19,7 +25,7 @@ Dma.ADC.1.MemInc=DMA_MINC_ENABLE
 Dma.ADC.1.Mode=DMA_CIRCULAR
 Dma.ADC.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
 Dma.ADC.1.PeriphInc=DMA_PINC_DISABLE
-Dma.ADC.1.Priority=DMA_PRIORITY_LOW
+Dma.ADC.1.Priority=DMA_PRIORITY_HIGH
 Dma.ADC.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 Dma.DAC_CH1.0.Direction=DMA_MEMORY_TO_PERIPH
 Dma.DAC_CH1.0.Instance=DMA1_Channel2
@@ -53,10 +59,12 @@ Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
 Mcu.Pin10=PA7
-Mcu.Pin11=PA13
-Mcu.Pin12=PA14
-Mcu.Pin13=VP_SYS_VS_Systick
-Mcu.Pin14=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin11=PA8
+Mcu.Pin12=PA9
+Mcu.Pin13=PA13
+Mcu.Pin14=PA14
+Mcu.Pin15=VP_SYS_VS_Systick
+Mcu.Pin16=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PH0-OSC_IN
 Mcu.Pin4=PA0
@@ -65,7 +73,7 @@ Mcu.Pin6=PA3
 Mcu.Pin7=PA4
 Mcu.Pin8=PA5
 Mcu.Pin9=PA6
-Mcu.PinsNb=15
+Mcu.PinsNb=17
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L073RZTx
@@ -82,6 +90,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:false
 NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 PA0.Mode=IN0
 PA0.Signal=ADC_IN0
 PA13.GPIOParameters=GPIO_Label
@@ -111,6 +120,10 @@ PA5.Locked=true
 PA5.Signal=GPIO_Output
 PA6.Signal=S_TIM3_CH1
 PA7.Signal=S_TIM3_CH2
+PA8.Locked=true
+PA8.Signal=GPIO_Output
+PA9.Locked=true
+PA9.Signal=GPIO_Output
 PC13.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PC13.GPIO_Label=B1 [Blue PushButton]
 PC13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
@@ -159,45 +172,45 @@ ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_DAC_Init-DAC-false-HAL-true,6-MX_TIM6_Init-TIM6-false-HAL-true,7-MX_ADC_Init-ADC-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true
-RCC.48CLKFreq_Value=24000000
-RCC.48RNGFreq_Value=24000000
-RCC.48USBFreq_Value=24000000
+RCC.48CLKFreq_Value=32000000
+RCC.48RNGFreq_Value=32000000
+RCC.48USBFreq_Value=32000000
 RCC.ADCFreq_Value=16000000
-RCC.AHBCLKDivider=RCC_SYSCLK_DIV2
-RCC.AHBFreq_Value=12000000
-RCC.APB1Freq_Value=12000000
-RCC.APB1TimFreq_Value=12000000
-RCC.APB2Freq_Value=12000000
-RCC.APB2TimFreq_Value=12000000
-RCC.FCLKCortexFreq_Value=12000000
+RCC.AHBFreq_Value=32000000
+RCC.APB1Freq_Value=32000000
+RCC.APB1TimFreq_Value=32000000
+RCC.APB2Freq_Value=32000000
+RCC.APB2TimFreq_Value=32000000
+RCC.FCLKCortexFreq_Value=32000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=12000000
+RCC.HCLKFreq_Value=32000000
 RCC.HSE_VALUE=8000000
 RCC.HSI16_VALUE=16000000
 RCC.HSI48_VALUE=48000000
 RCC.HSI_VALUE=16000000
-RCC.I2C1Freq_Value=12000000
-RCC.I2C3Freq_Value=12000000
-RCC.IPParameters=48CLKFreq_Value,48RNGFreq_Value,48USBFreq_Value,ADCFreq_Value,AHBCLKDivider,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI16_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C3Freq_Value,LCDFreq_Value,LPTIMFreq_Value,LPUARTFreq_Value,LSI_VALUE,MCOPinFreq_Value,MSIClockRange,MSI_VALUE,PLLCLKFreq_Value,PWRFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TIMFreq_Value,TimerFreq_Value,USART1Freq_Value,USART2Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,WatchDogFreq_Value
+RCC.I2C1Freq_Value=32000000
+RCC.I2C3Freq_Value=32000000
+RCC.IPParameters=48CLKFreq_Value,48RNGFreq_Value,48USBFreq_Value,ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI16_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C3Freq_Value,LCDFreq_Value,LPTIMFreq_Value,LPUARTFreq_Value,LSI_VALUE,MCOPinFreq_Value,MSIClockRange,MSI_VALUE,PLLCLKFreq_Value,PLLMUL,PWRFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TIMFreq_Value,TimerFreq_Value,USART1Freq_Value,USART2Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,WatchDogFreq_Value
 RCC.LCDFreq_Value=37000
-RCC.LPTIMFreq_Value=12000000
-RCC.LPUARTFreq_Value=12000000
+RCC.LPTIMFreq_Value=32000000
+RCC.LPUARTFreq_Value=32000000
 RCC.LSI_VALUE=37000
-RCC.MCOPinFreq_Value=24000000
+RCC.MCOPinFreq_Value=32000000
 RCC.MSIClockRange=RCC_MSIRANGE_6
 RCC.MSI_VALUE=4194000
-RCC.PLLCLKFreq_Value=24000000
+RCC.PLLCLKFreq_Value=32000000
+RCC.PLLMUL=RCC_PLLMUL_4
 RCC.PWRFreq_Value=2097000
 RCC.RTCFreq_Value=37000
 RCC.RTCHSEDivFreq_Value=4000000
-RCC.SYSCLKFreq_VALUE=24000000
+RCC.SYSCLKFreq_VALUE=32000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.TIMFreq_Value=12000000
-RCC.TimerFreq_Value=12000000
-RCC.USART1Freq_Value=12000000
-RCC.USART2Freq_Value=12000000
+RCC.TIMFreq_Value=32000000
+RCC.TimerFreq_Value=32000000
+RCC.USART1Freq_Value=32000000
+RCC.USART2Freq_Value=32000000
 RCC.VCOInputFreq_Value=16000000
-RCC.VCOOutputFreq_Value=48000000
+RCC.VCOOutputFreq_Value=64000000
 RCC.WatchDogFreq_Value=37000
 SH.COMP_DAC1_group.0=DAC_OUT1,DAC_OUT1
 SH.COMP_DAC1_group.ConfNb=1
@@ -209,7 +222,7 @@ SH.S_TIM3_CH2.0=TIM3_CH2,Encoder_Interface
 SH.S_TIM3_CH2.ConfNb=1
 TIM6.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM6.IPParameters=Period,TIM_MasterOutputTrigger,AutoReloadPreload,Prescaler
-TIM6.Period=362
+TIM6.Period=333
 TIM6.Prescaler=0
 TIM6.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 USART2.IPParameters=VirtualMode-Asynchronous
